--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Learning to Slice an Onion</title>
+    <title>Learning to Dice an Onion</title>
   </head>
   <body>
     <p>The three learning objectives for slicing an onion are ...</p>
     <ul>
-      <li> Assembling materials </li>
+      <li> <a href=/>Assembling materials</a> </li>
       <li> Prepping the onion </li>
-      <li> Slicing the onion </li>
+      <li> Dicing the onion </li>
     </ul>
   </body>
 </html>
