--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <p>The three learning objectives for slicing an onion are ...</p>
     <ul>
-      <li> <a href=/>Assembling materials</a> </li>
+      <li> <a href=/materials>Assembling materials</a> </li>
       <li> Prepping the onion </li>
       <li> Dicing the onion </li>
     </ul>
