--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <p>The three learning objectives for dicing an onion are ...</p>
     <ul>
-      <li> <a href=/materials>Assembling materials</a> </li>
-      <li> <a href=/preppingonion>Prepping the onion</a> </li>
-      <li> <a href=/dicingonion>Dicing the onion</a> </li>
+      <li> <a href=/materials.html>Assembling materials</a> </li>
+      <li> <a href=/preppingonion.html>Prepping the onion</a> </li>
+      <li> <a href=/dicingonion.html>Dicing the onion</a> </li>
     </ul>
   </body>
 </html>
